--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "^18.2.0",
     "react-geolocated": "^4.1.2",
     "react-router-dom": "^6.22.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "react-to-print": "^2.15.1",
     "yet-another-react-lightbox": "^3.18.0"
   },
   "scripts": {
