--- a/package.json
+++ b/package.json
@@ -3,23 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@chakra-ui/react": "^2.8.2",
     "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@mui/icons-material": "^5.15.18",
-    "@mui/material": "^5.15.18",
+    "antd": "^5.18.1",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
-    "framer-motion": "^6.3.16",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "expresss": "^0.0.0",
+    "framer-motion": "^6.3.16",
     "mongoose": "^8.3.2",
     "nodemon": "^3.1.0",
     "phosphor-react": "^1.4.1",
